Remove deprecated Number consturctor calls; use Number#valueOf instread.